--- a/Tela.html
+++ b/Tela.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-	<script src="css/estilo.js"></script>
+	<script src="js/s2u.js"></script>
 	<title>Services to You</title>
 </head>
 <body>
@@ -16,41 +17,46 @@
 				<p class="descricao">Solucão em Serviços</p>
 			</div>
 			<a class="login">Entrar</a>
+			<div class="box-login">
+				<form>
+					<input placeholder="Insira aqui seu e-mail">
+					<input placeholder="Insira sua senha">
+					<div class="actions">
+						<button type='submit'>Enviar</button>
+						<button class="cancel">Cancelar</button>
+						<span class="cadastrar"><a href="página_De_Joao">Quero me cadastrar!</a></span>
+					</div>
+				</form>
+			</div>
 			<ul class="menu">
-				<li><a href="#introducao">Início</a></li> |
-				<li><a href="#servicos-oferecidos">Oferecer Serviço</a></li> |
-				<li><a href="#cadastrar-servico">Adquirir Serviço</a></li> |
-				<li><a href="#sobre-nos">Contato</a></li> 
+				<li class="current-user">Olá <span class="nome-usuario"> Fulano de tal.  </span> Bem vindo ao S2U seu portal de serviços. </li>
+				<li><a href="contato.html">Contato</a></li>
+				<li><a href="adquirir.html">Adquirir Serviço</a></li> 
+				<li><a href="oferecer.html">Oferecer Serviço</a></li> 
+				<li><a href="#">Inicio</a></li>
 			</ul>
 		</div>
 		<div class="context">
-			<div class="box" id="introducao">
-				<span class="label">Home</span>
-				<span class="introducao">Banner</span>
-				<p>
-					Introdução Introdução Introdução Introdução Introdução
-				</p>
+			<div id="inicio">
+				<div class="introducao-texto call">
+					<span class="introducao">Banner</span>
+					<h2>Início</h2>
+					<p> Olá, somos a S2U (Services to You).  Seu portal de serviços. Aqui você irá encontrar as mais diversas mãos de obra para um trabalho de qualidade. A origem deste portal se deu da necessidade de um serviço terceirizado e a falta de recursos para encontrá-lo.</p>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p> Seja muito bem vindo, sua satisfação é nosso objetivo. Qualquer dúvida ou sugestão, procure-nos. Sua palavra é muito importante para nós. Equipe S2U. </p>
+				</div>
 			</div>
-			
-			<div class="box" id="servicos-oferecidos">
-				<span class="label">Serviços</span>
-				<p>	
-					Serviços Oferecidos Serviços Oferecidos Serviços Oferecidos Serviços Oferecidos 
-				</p>
-			</div>
-			
-			<div class="box" id="cadastrar-servico">
-				<span class="label">Cadastrar Serviço</span>
-				<p>
-					Cadastrar Serviço Cadastrar Serviço Cadastrar Serviço Cadastrar Serviço
-				</p>
-			</div>
-			
-			<div class="box" id="sobre-nos">
-				<span class="label">Sobre nós</span>
-				<p>
-					Sobre nós Sobre nós Sobre nós Sobre nós Sobre nós
-				</p>
 		</div>
 	</div>
 </body>
