--- a/oferecer.html
+++ b/oferecer.html
@@ -24,7 +24,7 @@
 					<div class="actions">	
 						<button type='submit'>Enviar</button>
 						<button class="cancel">Cancelar</button>
-						<span class="cadastrar"><a href="página_De_Joao">Quero me cadastrar!</a></span>
+						<span class="cadastrar"><a href="novocadastro.html">Quero me cadastrar!</a></span>
 
 					</div>
 				</form>
