--- a/Tela.html
+++ b/Tela.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
 	<script src="js/s2u.js"></script>
 	<title>Services to You</title>
@@ -24,7 +24,7 @@
 					<div class="actions">
 						<button type='submit'>Enviar</button>
 						<button class="cancel">Cancelar</button>
-						<span class="cadastrar"><a href="novocadastro.html">Quero me cadastrar!</a></span>
+						<span class="cadastrar"><a href="cadastro.html">Quero me cadastrar!</a></span>
 					</div>
 				</form>
 			</div>
